Republic — Iran's Digital Direct Democracy platform
Generative animated background (Hat/Rosette/Truchet patterns), civic compass tag cloud, full EN + FA bilingual site.

--- a/fa/index.html
+++ b/fa/index.html
@@ -39,6 +39,9 @@
 
   <!-- بخش قهرمان -->
   <section class="hero" id="home">
+    <div class="hero__bg">
+        <div id="pattern-overlay" class="hero__grid" style="opacity: 0.15; z-index: 1;"></div>
+    </div>
     <div class="hero__container">
       <div class="hero__badge" data-animate>
         <span class="hero__badge-dot"></span>
@@ -562,6 +565,22 @@
           </ul>
         </div>
       </div>
+
+      <div class="compass-use-cases" data-animate>
+        <p class="compass-use-cases__label">قطب‌نما چه امکاناتی فراهم می‌کند</p>
+        <div class="compass-use-cases__tags">
+          <span>مشارکت میانجی‌گرانه پاداش‌داده‌شده برای تطابق مدنی ایده‌آل</span>
+          <span>روح‌جفت مدنی خود را بیاب</span>
+          <span>هندسه ائتلاف — ببین چه کسی با تو همپوشانی دارد</span>
+          <span>هویت رأی‌دهنده در ۸ بُعد</span>
+          <span>سیاستت شکل دارد نه طرف</span>
+          <span>مناطق اجماع سیاستی را ناشناس کشف کن</span>
+          <span>تطابق نزدیکی چندوجهی</span>
+          <span>امتیازدهی به هم‌راستایی شکل نمایندگانت</span>
+          <span>همتاسازی مدنی برای گروه‌های مشورتی</span>
+          <span>بر اساس ابعاد مشترک اتحاد تشکیل بده</span>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -964,6 +983,8 @@
   <script src="../rankedpairs.js"></script>
   <script src="../compass.js"></script>
   <script src="../clusters.js"></script>
+  <script src="../patterns.js"></script>
+  <script src="../render-pattern.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
