Add Iran intro animation — 90M dots map → zoom → civic compass

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Iran Intro Overlay -->
+  <canvas id="iran-intro" aria-hidden="true"></canvas>
+
   <!-- Navigation -->
   <nav class="nav" id="nav">
     <div class="nav__container">
@@ -990,6 +993,7 @@
     </div>
   </footer>
 
+  <script src="iran-intro.js"></script>
   <script src="rankedpairs.js"></script>
   <script src="compass.js"></script>
   <script src="clusters.js"></script>
