Update moderation description to clarify hate speech handling in Agora section

--- a/en/index.html
+++ b/en/index.html
@@ -235,7 +235,7 @@
       <div class="section__header" data-animate>
         <span class="section__label">How Moderation Works</span>
         <h2 class="section__title">Every Post, Checked Against Fundamental Freedoms</h2>
-        <p class="section__desc">Before a statement enters the deliberation pool, Agora verifies it against the UN International Covenants on Human Rights. Hate speech and incitement are blocked — civic debate is protected.</p>
+        <p class="section__desc">Before a statement enters the deliberation pool, Agora verifies it against the UN International Covenants on Human Rights. Hate speech and incitement are flagged and greyed out — civic debate is protected.</p>
       </div>
       <div class="agora-term" aria-hidden="true">
         <div class="agora-term__bar">
