Update manifest link to use localized URL in the index.html

--- a/fa/index.html
+++ b/fa/index.html
@@ -59,7 +59,7 @@
           معماری را کاوش کنید
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none"><path d="M13 8H3M7 4l-4 4 4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
         </a>
-        <a href="https://armantorkzaban.com/posts/republic/" target="_blank" class="btn btn--outline">
+        <a href="https://armantorkzaban.com/posts/%D8%AC%D9%85%D9%87%D9%88%D8%B1/" target="_blank" class="btn btn--outline">
           مانیفست را بخوانید
         </a>
       </div>
